--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="container mt-5 text-center">
-
-        <form>
+    <div class="box-holder">
+        <form id="task-form">
             <div class="row mb-5 bg-light p-3">
                 <div class="col-xl-3 col-xs-12">
-                    <label for="Task-Title"> </label>
-                    <input type="text" class="form-control" id="Task-Title" placeholder="Iveskite uzduoties pavadinimą">
+                    <label for="taskButton"> </label>
+                    <input type="text" class="form-control" id="taskSubject" placeholder="Enter task here">
                 </div>
                 <div class="col-xl-3 col-xs-12">
-                    <label for="priority-pick">Priority level</label>
-                    <select id="priority-pick" class="form-select" aria-label="Default select example">
+                    <label for="taskPriority">Priority level</label>
+                    <select class="form-select" id="taskPriority" aria-label="Default select example">
                         <option value="1">High</option>
                         <option value="2">Medium</option>
                         <option value="3">Low</option>
                     </select>
                 </div>
                 <div class="col-xl-3 col-xs-12">
-                    <label for="pick-date">Due date</label>
-                    <input type="date" class="form-control" id="pick-date">
+                    <label for="dateButton">Due date</label>
+                    <input type="date" class="form-control" id="taskDate">
                 </div>
                 <div class="col-xl-3 col-xs-12 mt-3">
-                    <button type="button" class="btn btn-primary" id="addTaskBtn">Add task</button>
+                    <button type="submit" class="btn btn-success" id="addTaskButton">
+                        Add task
+                    </button>
                 </div>
             </div>
         </form>
@@ -42,10 +43,13 @@
                     <th class="text-center bg-light" scope="col">Due date</th>
                     <th class="text-center bg-light" scope="col">Status</th>
                     <th class="text-center bg-light" scope="col">Percent completed</th>
-                    <th class="text-center bg-light" scope="col">Modified on</th>
-                    <th class="text-center bg-light priority" scope="col">Delete task</th>
+                    <th class="text-center bg-light" scope="col">Modified on</th> 
+                    <th class="text-center bg-light priority" scope="col">Delete task</th> 
                 </tr>
             </thead>
+            <tbody id="table-body">
+
+            </tbody>
         </table>
     </div>
     <script src="js/app.js"></script>
